[package]
name = "endinero"
version = "0.1.3"
rust-version = "1.65"
edition = "2021"
authors = [ "DiarioBitcoin", "gubatron" ]
license = "Apache-2.0"
description = "Utility functions to format numbers as money designed for Spanish/European speaking locales."
readme = "README.md"
repository = "https://github.com/diariobitcoin/endinero"
keywords = ["formatting", "money", "dinero", "diariobitcoin", "number-formatting"]

[lib]
name = "endinero"
path = "src/lib.rs"

[dependencies]
