[package]
name = "endinero"
version = "0.1.7"
rust-version = "1.65"
edition = "2021"
authors = [ "DiarioBitcoin", "gubatron" ]
license = "Apache-2.0"
description = "Utility functions to format numbers as money designed for Spanish/European speaking locales."
readme = "README.md"
#On the week of december 11th, we noticed github suspended our account without notice
#leaving this for now in case github comes back, we like github better than gitlab
#repository = "https://github.com/diariobitcoin/endinero"
repository = "https://github.com/diariobtc/endinero"
keywords = ["formatting", "money", "dinero", "diariobitcoin", "number-formatting"]

[lib]
name = "endinero"
path = "src/lib.rs"

[dependencies]
